--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.7.1",
     "markdown-it": "^13.0.2",
     "marked": "^11.0.0",
+    "python3": "^0.0.1",
     "requirejs": "^2.3.6",
     "virtualenv": "^0.3.1"
   },
@@ -62,7 +63,7 @@
       },
       "makers": [
         {
-          "name": "@electron-forge/maker-dmg", 
+          "name": "@electron-forge/maker-dmg",
           "config": {}
         }
       ]
