--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "DOOOOOOOOOOOOOOOT BAREBONES VERSION",
   "main": "src/index.js",
   "scripts": {
+    "build": "webpack",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -19,14 +20,23 @@
   "license": "MIT",
   "dependencies": {
     "@craco/craco": "^5.9.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "dompurify": "^3.0.6",
     "electron-squirrel-startup": "^1.0.0",
+    "flowbite": "^2.2.1",
     "fs-extra": "^10.0.1",
     "jquery": "^3.7.1",
+    "lucide-react": "^0.302.0",
     "markdown-it": "^13.0.2",
     "marked": "^11.0.0",
     "python3": "^0.0.1",
     "requirejs": "^2.3.6",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "virtualenv": "^0.3.1"
   },
   "devDependencies": {
@@ -40,7 +50,13 @@
     "autoprefixer": "^10.4.16",
     "electron": "26.2.4",
     "electron-builder": "^24.6.4",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "postcss": "^8.4.32",
+    "postcss-cli": "^11.0.0",
+    "postcss-loader": "^7.3.4",
+    "tailwindcss": "^3.4.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "build": {
     "appId": "dot",
