--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "keywords": [],
   "author": {
-    "name": "Alex Piñel Neparidze",
-    "email": "alexpinel28@gmail.com"
+    "name": "Bluepoint AI",
+    "email": "ashwin.iyer@bluepointai.com"
   },
   "license": "MIT",
   "dependencies": {
