--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "dot",
     "productName": "dot",
-    "version": "1.0.0",
-    "description": "DOOOOOOOOOOOOOOOT BAREBONES VERSION",
+    "version": "1.1.0",
+    "description": "Dot second release",
     "main": "src/index.js",
     "scripts": {
         "tail": "tailwindcss -i ./src/index.css -o ./src/dist/output.css --watch",
@@ -11,7 +11,8 @@
         "package": "electron-forge package",
         "make": "electron-forge make",
         "publish": "electron-forge publish",
-        "lint": "echo \"No linting configured\""
+        "lint": "echo \"No linting configured\"",
+        "dist": "electron-builder --publish never"
     },
     "keywords": [],
     "author": {
@@ -25,19 +26,21 @@
         "@heroicons/react": "^2.1.1",
         "@radix-ui/react-icons": "^1.3.0",
         "class-variance-authority": "^0.7.0",
-        "clsx": "^2.0.0",
+        "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
         "electron-squirrel-startup": "^1.0.0",
         "flowbite": "^2.2.1",
-        "fs-extra": "^10.0.1",
+        "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
         "lucide-react": "^0.302.0",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
+        "sax": "^1.3.0",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
+        "universalify": "^2.0.1",
         "virtualenv": "^0.3.1"
     },
     "devDependencies": {
@@ -51,6 +54,7 @@
         "autoprefixer": "^10.4.16",
         "electron": "26.2.4",
         "electron-builder": "^24.6.4",
+        "electron-notarize": "^1.2.2",
         "ncp": "^2.0.0",
         "postcss": "^8.4.32",
         "postcss-cli": "^11.0.0",
@@ -65,26 +69,20 @@
         "appId": "dot",
         "productName": "dot",
         "mac": {
-            "category": "Productivity",
+            "category": "public.app-category.utilities",
             "target": "dmg",
             "icon": "./src/Assets/icon2.icns",
-            "identity": "Apple Development: alexpinel28@gmail.com (863FT89FMU)"
-        }
-    },
-    "config": {
-        "forge": {
-            "packagerConfig": {
-                "icon": "./src/Assets/icon2.icns",
-                "extraResources": {
-                    "from": "./llm",
-                    "to": "llm"
-                }
-            },
-            "makers": [
-                {
-                    "name": "@electron-forge/maker-dmg",
-                    "config": {}
-                }
+            "hardenedRuntime": true,
+            "gatekeeperAssess": false,
+            "entitlements": "./entitlements.mac.plist",
+            "entitlementsInherit": "./entitlements.mac.plist"
+        },
+        "afterSign": "./src/notarize.js",
+        "extraResources": {
+            "from": "/Users/alexpinel/Desktop/llm",
+            "to": "llm",
+            "filter": [
+                "**/*"
             ]
         }
     }
