--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "@radix-ui/react-icons": "^1.3.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "custom-electron-titlebar": "^4.2.8",
         "dompurify": "^3.0.6",
         "electron-squirrel-startup": "^1.0.0",
+        "electron-titlebar": "^0.0.3",
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
@@ -72,13 +74,13 @@
             "category": "public.app-category.utilities",
             "target": [
                 {
-                  "target": "default",
-                  "arch": [
-                    "x64",
-                    "arm64"
-                  ]
+                    "target": "default",
+                    "arch": [
+                        "x64",
+                        "arm64"
+                    ]
                 }
-              ],
+            ],
             "icon": "./src/Assets/icon2.icns",
             "hardenedRuntime": true,
             "gatekeeperAssess": false,
