--- a/package.json
+++ b/package.json
@@ -24,17 +24,22 @@
         "@craco/craco": "^5.9.0",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.1.1",
+        "@langchain/community": "^0.0.26",
         "@radix-ui/react-icons": "^1.3.0",
+        "@xenova/transformers": "^2.15.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
         "electron-squirrel-startup": "^1.0.0",
+        "faiss-node": "^0.5.1",
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
+        "langchain": "^0.1.17",
         "lucide-react": "^0.302.0",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
+        "node-llama-cpp": "^2.8.6",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
         "sax": "^1.3.0",
