--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
         "@craco/craco": "^5.9.0",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.1.1",
-"@huggingface/inference": "^2.6.4",
+        "@huggingface/inference": "^2.6.4",
         "@langchain/community": "^0.0.26",
         "@radix-ui/react-icons": "^1.3.0",
-"@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+        "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
         "@tensorflow/tfjs-backend-cpu": "^4.17.0",
         "@tensorflow/tfjs-converter": "^3.6.0",
         "@tensorflow/tfjs-core": "^3.6.0",
@@ -36,15 +36,18 @@
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
         "electron-squirrel-startup": "^1.0.0",
-"faiss-node": "^0.5.1",
+        "faiss-node": "^0.5.1",
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
-"langchain": "^0.1.17",
+        "langchain": "^0.1.17",
         "lucide-react": "^0.302.0",
+        "mammoth": "^1.6.0",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
-"node-llama-cpp": "^2.8.6",
+        "node-llama-cpp": "^2.8.6",
+        "officeparser": "^4.0.8",
+        "pdf-parse": "^1.1.1",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
         "sax": "^1.3.0",
