--- a/package.json
+++ b/package.json
@@ -24,14 +24,8 @@
         "@craco/craco": "^5.9.0",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.1.1",
-        "@huggingface/inference": "^2.6.4",
-        "@langchain/community": "^0.0.26",
+        "@langchain/community": "^0.0.28",
         "@radix-ui/react-icons": "^1.3.0",
-        "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
-        "@tensorflow/tfjs-backend-cpu": "^4.17.0",
-        "@tensorflow/tfjs-converter": "^3.6.0",
-        "@tensorflow/tfjs-core": "^3.6.0",
-        "@xenova/transformers": "^2.15.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
@@ -40,7 +34,7 @@
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
-        "langchain": "^0.1.17",
+        "langchain": "^0.1.18",
         "lucide-react": "^0.302.0",
         "mammoth": "^1.6.0",
         "markdown-it": "^13.0.2",
@@ -53,6 +47,7 @@
         "sax": "^1.3.0",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
+        "typescript": "^5.3.3",
         "universalify": "^2.0.1",
         "virtualenv": "^0.3.1"
     },
