--- a/package.json
+++ b/package.json
@@ -1,39 +1,46 @@
 {
     "name": "dot",
     "productName": "Dot",
-    "version": "1.0.0",
-    "description": "Dot Release 15/02/2024",
+    "version": "0.9.0",
+    "description": "Dot",
     "main": "src/index.js",
     "scripts": {
         "tail": "tailwindcss -i ./src/index.css -o ./src/dist/output.css --watch",
         "build": "webpack",
         "start": "electron-forge start",
+        "package": "electron-forge package",
+        "make": "electron-forge make",
+        "publish": "electron-forge publish",
         "lint": "echo \"No linting configured\"",
         "dist": "electron-builder --publish never"
     },
     "keywords": [],
     "author": {
         "name": "Alex Pinel",
-        "email": ""
+        "email": "alexpinel28@gmail.com"
     },
-    "license": "GPL-3.0-only",
+    "license": "",
     "dependencies": {
         "@craco/craco": "^5.9.0",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.1.1",
+        "@langchain/community": "^0.0.28",
         "@radix-ui/react-icons": "^1.3.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
         "electron-squirrel-startup": "^1.0.0",
+        "faiss-node": "^0.5.1",
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
+        "langchain": "^0.1.18",
         "lucide-react": "^0.302.0",
         "mammoth": "^1.6.0",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
         "officeparser": "^4.0.8",
+        "pdf-parse": "^1.1.1",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
         "sax": "^1.3.0",
@@ -53,7 +60,7 @@
         "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
         "autoprefixer": "^10.4.16",
         "electron": "26.2.4",
-        "electron-builder": "^24.6.4",
+        "electron-builder": "^24.13.3",
         "electron-notarize": "^1.2.2",
         "ncp": "^2.0.0",
         "postcss": "^8.4.32",
@@ -66,12 +73,20 @@
         "webpack-cli": "^5.1.4"
     },
     "build": {
-        "appId": "io.dot.app",
-        "productName": "Dot",
-        "icon": "./src/Assets/MacOS_Icon.icns",
+        "appId": "com.alex.dot",
+        "productName": "dot",
+        "icon": "./src/Assets/App_Icon.ico",
+        "win": {
+            "target": "nsis-web",
+            "icon": "./src/Assets/App_Icon.ico"
+        },
+        "nsisWeb": {
+            "oneClick": "true",
+            "appPackageUrl": "https://d12avyi4v9yuwr.cloudfront.net/Dot-Windows-GPU",
+            "createDesktopShortcut": "always"
+        },
         "mac": {
             "category": "public.app-category.utilities",
-            "minimumSystemVersion": "12.0",
             "target": [
                 {
                     "target": "default",
@@ -89,12 +104,11 @@
         },
         "afterSign": "./src/notarize.js",
         "extraResources": {
-            "from": "/Users/Desktop/llm", 
+            "from": "C:/Users/MNeparidze/Desktop/llm",
             "to": "llm",
             "filter": [
                 "**/*"
-            ],
-            "EXPLANATION FOR extraResources": "When distributing the app place the llm folder in a separate directory and place its new path here. This ensures Python and the LLM scripts are placed in the resources folder after packaging"
+            ]
         }
     }
 }
