--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "dot",
     "productName": "Dot",
-    "version": "1.0.0",
-    "description": "Dot Release 15/02/2024",
+    "version": "0.9.1",
+    "description": "Dot",
     "main": "src/index.js",
     "scripts": {
         "tail": "tailwindcss -i ./src/index.css -o ./src/dist/output.css --watch",
         "build": "webpack",
-        "start": "electron-forge start",
+        "start": "electron .",
         "lint": "echo \"No linting configured\"",
         "dist": "electron-builder --publish never"
     },
@@ -18,10 +18,6 @@
     },
     "license": "GPL-3.0-only",
     "dependencies": {
-        "@craco/craco": "^5.9.0",
-        "@headlessui/react": "^1.7.17",
-        "@heroicons/react": "^2.1.1",
-        "@radix-ui/react-icons": "^1.3.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
@@ -29,17 +25,14 @@
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
-        "lucide-react": "^0.302.0",
-        "mammoth": "^1.6.0",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
-        "officeparser": "^4.0.8",
+        "node-fetch": "^2.6.7",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
         "sax": "^1.3.0",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.3.3",
         "universalify": "^2.0.1",
         "virtualenv": "^0.3.1"
     },
@@ -66,6 +59,10 @@
         "webpack-cli": "^5.1.4"
     },
     "build": {
+        "asar": true,
+        "asarUnpack": [
+            "**/node_modules/node-fetch/**/*"
+        ],
         "appId": "io.dot.app",
         "productName": "Dot",
         "icon": "./src/Assets/MacOS_Icon.icns",
@@ -76,12 +73,11 @@
                 {
                     "target": "default",
                     "arch": [
-                        "x64",
                         "arm64"
                     ]
                 }
             ],
-            "icon": "./src/Assets/icon2.icns",
+            "icon": "./src/Assets/MacOS_Icon.icns",
             "hardenedRuntime": true,
             "gatekeeperAssess": false,
             "entitlements": "./entitlements.mac.plist",
@@ -89,12 +85,11 @@
         },
         "afterSign": "./src/notarize.js",
         "extraResources": {
-            "from": "/Users/Desktop/llm", 
+            "from": "/Users/Desktop/llm",
             "to": "llm",
             "filter": [
                 "**/*"
-            ],
-            "EXPLANATION FOR extraResources": "When distributing the app place the llm folder in a separate directory and place its new path here. This ensures Python and the LLM scripts are placed in the resources folder after packaging"
+            ]
         }
     }
 }
