--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "dot",
     "productName": "Dot",
-    "version": "1.0.0",
-    "description": "Dot second release",
+    "version": "0.9.1GPU",
+    "description": "",
     "main": "src/index.js",
     "scripts": {
         "tail": "tailwindcss -i ./src/index.css -o ./src/dist/output.css --watch",
@@ -17,39 +17,37 @@
     "keywords": [],
     "author": {
         "name": "Alex Pinel",
-        "email": "alexpinel28@gmail.com"
+        "email": ""
     },
-    "license": "",
+    "license": "GPL-3.0-only",
     "dependencies": {
-        "@craco/craco": "^5.9.0",
-        "@headlessui/react": "^1.7.17",
-        "@heroicons/react": "^2.1.1",
-        "@langchain/community": "^0.0.28",
-        "@radix-ui/react-icons": "^1.3.0",
+        "@xenova/transformers": "^2.17.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "cmake-js": "^7.3.0",
         "dompurify": "^3.0.6",
         "electron-squirrel-startup": "^1.0.0",
-        "faiss-node": "^0.5.1",
+        "ffmpeg-static": "^5.2.0",
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
-        "langchain": "^0.1.18",
-        "lucide-react": "^0.302.0",
-        "mammoth": "^1.6.0",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
-        "node-llama-cpp": "^2.8.6",
-        "officeparser": "^4.0.8",
-        "pdf-parse": "^1.1.1",
+        "node-fetch": "^2.6.7",
+        "node-wav-player": "^0.2.0",
+        "play-sound": "^1.1.6",
+        "prism-media": "^1.3.5",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
         "sax": "^1.3.0",
+        "speaker": "^0.5.4",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.3.3",
         "universalify": "^2.0.1",
-        "virtualenv": "^0.3.1"
+        "virtualenv": "^0.3.1",
+        "wavefile": "^11.0.0",
+        "jest": "^29.4.0",
+        "node-addon-api": "^5.0.0"
     },
     "devDependencies": {
         "@electron-forge/cli": "^6.4.2",
@@ -74,12 +72,21 @@
         "webpack-cli": "^5.1.4"
     },
     "build": {
+        "asar": true,
+        "asarUnpack": [
+            "**/node_modules/node-fetch/**/*"
+        ],
         "appId": "com.alex.dot",
         "productName": "dot",
         "icon": "./src/Assets/App_Icon.ico",
         "win": {
-            "target": "nsis-web", 
-            "icon": "./src/Assets/App_Icon.ico" 
+            "target": "nsis-web",
+            "icon": "./src/Assets/App_Icon.ico"
+        },
+        "nsisWeb": {
+            "oneClick": "true",
+            "appPackageUrl": "https://github.com/alexpinel/Dot/releases/download/v0.9.1",
+            "createDesktopShortcut": "always"
         },
         "mac": {
             "category": "public.app-category.utilities",
