--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     },
     "license": "GPL-3.0-only",
     "dependencies": {
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@xenova/transformers": "^2.17.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
@@ -25,16 +27,22 @@
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
+        "katex": "^0.16.10",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
         "node-fetch": "^2.6.7",
+        "node-record-lpcm16": "^1.0.1",
+        "node-wav-player": "^0.2.0",
+        "play-sound": "^1.1.6",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
         "sax": "^1.3.0",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
         "universalify": "^2.0.1",
-        "virtualenv": "^0.3.1"
+        "virtualenv": "^0.3.1",
+        "wavefile": "^11.0.0",
+        "whisper.cpp": "^1.0.3"
     },
     "devDependencies": {
         "@electron-forge/cli": "^6.4.2",
@@ -45,6 +53,7 @@
         "@electron-forge/maker-zip": "^6.4.2",
         "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
         "autoprefixer": "^10.4.16",
+        "cmake-js": "^7.3.0",
         "electron": "26.2.4",
         "electron-builder": "^24.6.4",
         "electron-notarize": "^1.2.2",
