--- a/entitlements.mac.plist
+++ b/entitlements.mac.plist
@@ -20,5 +20,7 @@
     <true/>
     <key>com.apple.security.automation.apple-events</key>
     <true/>
+    <key>com.apple.security.device.audio-input</key>
+    <true/>
   </dict>
 </plist>
