--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dot",
     "productName": "Dot",
-    "version": "0.9.1",
+    "version": "0.9.2",
     "description": "Dot",
     "main": "src/index.js",
     "scripts": {
@@ -19,7 +19,6 @@
     "license": "GPL-3.0-only",
     "dependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "@xenova/transformers": "^2.17.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
@@ -30,6 +29,7 @@
         "katex": "^0.16.10",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
+        "naudiodon2": "^2.4.0",
         "node-fetch": "^2.6.7",
         "node-record-lpcm16": "^1.0.1",
         "node-wav-player": "^0.2.0",
@@ -37,12 +37,12 @@
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
         "sax": "^1.3.0",
+        "sherpa-onnx": "^1.9.24",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
         "universalify": "^2.0.1",
         "virtualenv": "^0.3.1",
-        "wavefile": "^11.0.0",
-        "whisper.cpp": "^1.0.3"
+        "wavefile": "^11.0.0"
     },
     "devDependencies": {
         "@electron-forge/cli": "^6.4.2",
@@ -94,10 +94,11 @@
         },
         "afterSign": "./src/notarize.js",
         "extraResources": {
-            "from": "/Users/Desktop/llm",
+            "from": "/Users/alexpinel/Desktop/llm",
             "to": "llm",
             "filter": [
-                "**/*"
+                "**/*",
+                "!**/.git/**/*"
             ]
         }
     }
