--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "license": "GPL-3.0-only",
     "dependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "axios": "^1.6.8",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
