--- a/package.json
+++ b/package.json
@@ -19,30 +19,44 @@
     "license": "GPL-3.0-only",
     "dependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@langchain/community": "^0.2.3",
+        "@langchain/core": "^0.2.1",
+        "@langchain/langgraph": "^0.0.21",
+        "@xenova/transformers": "^2.17.2",
         "axios": "^1.6.8",
+        "bindings": "^1.5.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
         "electron-squirrel-startup": "^1.0.0",
+        "faiss-node": "^0.5.1",
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
         "katex": "^0.16.10",
+        "langchain": "^0.2.4",
+        "mammoth": "^1.7.2",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
         "naudiodon2": "^2.4.0",
+        "node-aplay": "^1.0.3",
         "node-fetch": "^2.6.7",
+        "node-llama-cpp": "^2.8.11",
         "node-record-lpcm16": "^1.0.1",
         "node-wav-player": "^0.2.0",
+        "officeparser": "^4.1.1",
+        "pdf-parse": "^1.1.1",
         "play-sound": "^1.1.6",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
         "sax": "^1.3.0",
         "sherpa-onnx": "^1.9.24",
+        "speaker": "^0.5.5",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
         "universalify": "^2.0.1",
         "virtualenv": "^0.3.1",
+        "wav-decoder": "^1.3.0",
         "wavefile": "^11.0.0"
     },
     "devDependencies": {
@@ -76,6 +90,15 @@
         "appId": "io.dot.app",
         "productName": "Dot",
         "icon": "./src/Assets/MacOS_Icon.icns",
+        "win": {
+            "target": "nsis-web",
+            "icon": "./src/Assets/App_Icon.ico"
+        },
+        "nsisWeb": {
+            "oneClick": "true",
+            "appPackageUrl": "https://github.com/alexpinel/Dot/releases/download/v0.9.2",
+            "createDesktopShortcut": "always"
+        },
         "mac": {
             "category": "public.app-category.utilities",
             "minimumSystemVersion": "12.0",
@@ -87,7 +110,7 @@
                     ]
                 }
             ],
-            "icon": "./src/Assets/MacOS_Icon.icns",
+            "icon": "./src/Assets/App_Icon.ico",
             "hardenedRuntime": true,
             "gatekeeperAssess": false,
             "entitlements": "./entitlements.mac.plist",
@@ -95,7 +118,7 @@
         },
         "afterSign": "./src/notarize.js",
         "extraResources": {
-            "from": "/Users/alexpinel/Desktop/llm",
+            "from": "C://Users//alexp//Desktop//llm",
             "to": "llm",
             "filter": [
                 "**/*",
