--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "axios": "^1.6.8",
         "bindings": "^1.5.0",
         "class-variance-authority": "^0.7.0",
+        "cli-progress": "^3.12.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
         "electron-squirrel-startup": "^1.0.0",
