--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
     "name": "dot",
     "productName": "Dot",
-    "version": "0.9.2",
+    "version": "0.9.3",
     "description": "Dot",
     "main": "src/index.js",
     "scripts": {
         "tail": "tailwindcss -i ./src/index.css -o ./src/dist/output.css --watch",
-        "build": "webpack",
+        "build": "electron-builder build",
         "start": "electron .",
         "lint": "echo \"No linting configured\"",
-        "dist": "electron-builder --publish never"
+        "dist": "electron-builder --publish never",
+        "package": "electron-builder"
     },
     "keywords": [],
     "author": {
@@ -19,7 +20,7 @@
     "license": "GPL-3.0-only",
     "dependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "@langchain/community": "^0.2.3",
+        "@langchain/community": "^0.2.16",
         "@langchain/core": "^0.2.1",
         "@langchain/langgraph": "^0.0.21",
         "@xenova/transformers": "^2.17.2",
@@ -35,7 +36,7 @@
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
         "katex": "^0.16.10",
-        "langchain": "^0.2.4",
+        "langchain": "^0.2.8",
         "mammoth": "^1.7.2",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
@@ -47,6 +48,7 @@
         "node-wav-player": "^0.2.0",
         "officeparser": "^4.1.1",
         "pdf-parse": "^1.1.1",
+        "pickleparser": "^0.2.1",
         "play-sound": "^1.1.6",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
@@ -61,6 +63,10 @@
         "wavefile": "^11.0.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.24.7",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-modules-commonjs": "^7.24.7",
+        "@babel/preset-env": "^7.24.7",
         "@electron-forge/cli": "^6.4.2",
         "@electron-forge/maker-deb": "^6.4.2",
         "@electron-forge/maker-dmg": "^7.2.0",
@@ -69,6 +75,7 @@
         "@electron-forge/maker-zip": "^6.4.2",
         "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
         "autoprefixer": "^10.4.16",
+        "babel-loader": "^9.1.3",
         "cmake-js": "^7.3.0",
         "electron": "26.2.4",
         "electron-builder": "^24.6.4",
@@ -80,13 +87,15 @@
         "prettier": "^3.1.1",
         "prettier-plugin-tailwindcss": "^0.5.10",
         "tailwindcss": "^3.4.0",
-        "webpack": "^5.89.0",
+        "webpack": "^5.92.1",
         "webpack-cli": "^5.1.4"
     },
     "build": {
-        "asar": true,
+        "asar": false,
         "asarUnpack": [
-            "**/node_modules/node-fetch/**/*"
+            "**/node_modules/node-fetch/**/*",
+            "**/node_modules/@langchain/community/**/*",
+            "**/node_modules/langchain/**/*"
         ],
         "appId": "io.dot.app",
         "productName": "Dot",
@@ -111,20 +120,22 @@
                     ]
                 }
             ],
-            "icon": "./src/Assets/App_Icon.ico",
+            "icon": "./src/Assets/MacOS_Icon.icns",
             "hardenedRuntime": true,
             "gatekeeperAssess": false,
             "entitlements": "./entitlements.mac.plist",
             "entitlementsInherit": "./entitlements.mac.plist"
         },
         "afterSign": "./src/notarize.js",
-        "extraResources": {
-            "from": "C://Users//alexp//Desktop//llm",
-            "to": "llm",
-            "filter": [
-                "**/*",
-                "!**/.git/**/*"
-            ]
-        }
+        "extraResources": [
+            {
+                "from": "/Users/alexpinel/Desktop/llm",
+                "to": "llm",
+                "filter": [
+                    "**/*",
+                    "!**/.git/**/*"
+                ]
+            }
+        ]
     }
 }
