--- a/package.json
+++ b/package.json
@@ -20,40 +20,32 @@
     "license": "GPL-3.0-only",
     "dependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "@langchain/community": "^0.2.16",
-        "@langchain/core": "^0.2.1",
-        "@langchain/langgraph": "^0.0.21",
-        "@xenova/transformers": "^2.17.2",
+        "aadotllm": "file:aadotllm",
         "axios": "^1.6.8",
         "bindings": "^1.5.0",
         "class-variance-authority": "^0.7.0",
         "cli-progress": "^3.12.0",
         "clsx": "^2.1.0",
         "dompurify": "^3.0.6",
+        "electron-is-dev": "^3.0.1",
         "electron-squirrel-startup": "^1.0.0",
-        "faiss-node": "^0.5.1",
         "flowbite": "^2.2.1",
         "fs-extra": "^10.1.0",
         "jquery": "^3.7.1",
         "katex": "^0.16.10",
-        "langchain": "^0.2.8",
         "mammoth": "^1.7.2",
         "markdown-it": "^13.0.2",
         "marked": "^11.0.0",
         "naudiodon2": "^2.4.0",
         "node-aplay": "^1.0.3",
         "node-fetch": "^2.6.7",
-        "node-llama-cpp": "^2.8.11",
         "node-record-lpcm16": "^1.0.1",
         "node-wav-player": "^0.2.0",
-        "officeparser": "^4.1.1",
-        "pdf-parse": "^1.1.1",
         "pickleparser": "^0.2.1",
         "play-sound": "^1.1.6",
         "python3": "^0.0.1",
         "requirejs": "^2.3.6",
         "sax": "^1.3.0",
-        "sherpa-onnx": "^1.9.24",
         "speaker": "^0.5.5",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
@@ -91,12 +83,11 @@
         "webpack-cli": "^5.1.4"
     },
     "build": {
-        "asar": false,
+        "asar": true,
         "asarUnpack": [
-            "**/node_modules/node-fetch/**/*",
-            "**/node_modules/@langchain/community/**/*",
-            "**/node_modules/langchain/**/*"
-        ],
+            "aadotllm/**",
+            "node_modules/**"
+          ],
         "appId": "io.dot.app",
         "productName": "Dot",
         "icon": "./src/Assets/MacOS_Icon.icns",
@@ -126,16 +117,6 @@
             "entitlements": "./entitlements.mac.plist",
             "entitlementsInherit": "./entitlements.mac.plist"
         },
-        "afterSign": "./src/notarize.js",
-        "extraResources": [
-            {
-                "from": "/Users/alexpinel/Desktop/llm",
-                "to": "llm",
-                "filter": [
-                    "**/*",
-                    "!**/.git/**/*"
-                ]
-            }
-        ]
+        "afterSign": "./src/notarize.js"
     }
 }
